fix: sync CLI version with package.json during publish
Resolves #501

**Problem:**
- CLI  flag reported outdated version (e.g., 2.13.2)
- package.json and get-local-version showed correct version (e.g., 2.14.0)
- Root cause: publish workflow built CLI before bumping version in package.json

**Solution:**
1. Created script/bump-version.ts to bump version before build
2. Modified publish workflow to run bump-version.ts before Build step
3. Modified publish.ts to skip version bump if already done

**Workflow now:**
1. Bump Version (updates package.json)
2. Build (embeds NEW version into dist/cli/index.js)
3. Publish (uses correct version)

**Testing:**
- Local build test confirms version correctly embedded in bundle
- Workflow now guarantees version sync between package.json and CLI

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -103,6 +103,12 @@ jobs:
           echo "=== package.json scripts ==="
           cat package.json | jq '.scripts'
 
+      - name: Bump Version
+        run: bun run script/bump-version.ts
+        env:
+          BUMP: ${{ inputs.bump }}
+          VERSION: ${{ inputs.version }}
+
       - name: Build
         run: |
           echo "=== Running bun build (main) ==="
