feat: add Harbor Terminal-Bench integration for Sisyphus agent
Add benchmark infrastructure to evaluate Sisyphus on Harbor Terminal-Bench:
- SisyphusAgent: Custom Harbor InstalledAgent that runs OpenCode with Sisyphus
- install-sisyphus.sh.j2: Jinja2 template for container setup
- ATIF trajectory parsing for metrics collection

Tested with hello-world@1.0 dataset (100% pass rate)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependencies
 .sisyphus/
 node_modules/
+__pycache__
 
 # Build output
 dist/
@@ -22,6 +23,7 @@ Thumbs.db
 # Logs
 *.log
 npm-debug.log*
+jobs
 
 # Lock files (use bun.lockb instead)
 package-lock.json
