fix(ci): add default model to sisyphus-agent workflow
The workflow was setting up anthropic provider but missing the required
'model' field in opencode.json, causing session creation failures.

--- a/.github/workflows/sisyphus-agent.yml
+++ b/.github/workflows/sisyphus-agent.yml
@@ -114,6 +114,7 @@ jobs:
 
           OPENCODE_JSON=~/.config/opencode/opencode.json
           jq --arg baseURL "$ANTHROPIC_BASE_URL" --arg apiKey "$ANTHROPIC_API_KEY" '
+            .model = "anthropic/claude-opus-4-5" |
             .provider.anthropic = {
               "name": "Anthropic",
               "npm": "@ai-sdk/anthropic",
